--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  story_view: ^0.16.5
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
